--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ dependencies {
     implementation('org.springdoc:springdoc-openapi-ui:1.6.12')
     runtimeOnly("io.netty:netty-all:4.1.68.Final") // added for mac m1
 
+    implementation("com.google.guava:guava:31.0.1-jre")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-guava")
+
     annotationProcessor("org.projectlombok:lombok:1.18.24")
 
     testImplementation("org.springframework.boot:spring-boot-starter-test")
